--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		@keyframes preloader_spin { 0% {transform: rotate(0deg);} 100% {transform: rotate(360deg);} }
 		@-webkit-keyframes preloader_spin { 0% {-webkit-transform: rotate(0deg);} 100% {-webkit-transform: rotate(360deg);}}
     </style>
+<link rel="stylesheet" href="custom-style.css">
 </head>
 <body>
 	<div id="preloader"></div>
